修改了一些config的配置，link了样式表和js代码。。

--- a/protected/view/layout.html
+++ b/protected/view/layout.html
@@ -3,13 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>FlashPHP</title>
+    <title>财务报销系统 | SAST</title>
     <!-- Necessarily Declarations -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <link rel="stylesheet" href="https://fonts.geekzu.org/css?family=Roboto:300,300i,400,400i,500,500i,700,700i">
+    <link rel="stylesheet" href="<{$ATSAST_CDN}>/css/bootstrap-material-design.min.css">
+    <link rel="stylesheet" href="<{$ATSAST_CDN}>/css/wemd-color-scheme.css">
+    <link rel="stylesheet" href="<{$ATSAST_CDN}>/css/atsast.css">
+    <link rel="stylesheet" href="<{$ATSAST_CDN}>/fonts/MDI-WXSS/MDI.css">
+    <link rel="stylesheet" href="<{$ATSAST_CDN}>/fonts/Devicon/devicon.css">
+
+    <script src="<{$ATSAST_CDN}>/js/jquery-3.2.1.min.js"></script>
+    <script src="<{$ATSAST_CDN}>/js/popper.min.js"></script>
+    <script src="<{$ATSAST_CDN}>/js/snackbar.min.js"></script>
+    <script src="<{$ATSAST_CDN}>/js/bootstrap-material-design.js"></script>
 </head>
 
 <body>
