--- a/protected/view/layout.html
+++ b/protected/view/layout.html
@@ -16,17 +16,20 @@
     <link rel="stylesheet" href="<{$ATSAST_CDN}>/css/atsast.css">
     <link rel="stylesheet" href="<{$ATSAST_CDN}>/fonts/MDI-WXSS/MDI.css">
     <link rel="stylesheet" href="<{$ATSAST_CDN}>/fonts/Devicon/devicon.css">
-
-    <script src="<{$ATSAST_CDN}>/js/jquery-3.2.1.min.js"></script>
-    <script src="<{$ATSAST_CDN}>/js/popper.min.js"></script>
-    <script src="<{$ATSAST_CDN}>/js/snackbar.min.js"></script>
-    <script src="<{$ATSAST_CDN}>/js/bootstrap-material-design.js"></script>
 </head>
 
 <body>
     <{include file="navbar.html" }>
     <{include file=$__template_file}>
     <{include file="footer.html" }>
+    <script src="<{$ATSAST_CDN}>/js/jquery-3.2.1.min.js"></script>
+    <script src="<{$ATSAST_CDN}>/js/popper.min.js"></script>
+    <script src="<{$ATSAST_CDN}>/js/snackbar.min.js"></script>
+    <script src="<{$ATSAST_CDN}>/js/bootstrap-material-design.js"></script>
+    <script>
+        $(document).ready(function () { $('body').bootstrapMaterialDesign(); });
+    </script>
+        
 </body>
 
 </html>
