修复了一个登陆注册的bug。修正了一些安全性问题，比如数据库密码放在了不该放的地方

--- a/protected/view/account_profile.html
+++ b/protected/view/account_profile.html
@@ -1,1 +1,44 @@
-<{ $info }>
+<style>
+    .card{
+        margin-top: 4rem;
+    }
+    tr{
+        border-top-style: hidden;
+    }
+</style>
+<div class="container mundb-standard-container">
+    <div class="card">
+        <div class="card-header">
+            个人资料
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="text-center col-xs-12 col-sm-12 col-md-6 col-lg-5">
+                    <img src="https://gss0.bdstatic.com/94o3dSag_xI4khGkpoWK1HF6hhy/baike/w%3D268%3Bg%3D0/sign=783d11acbf315c6043956ce9b58aac2e/1c950a7b02087bf49212ea50f1d3572c10dfcf89.jpg" alt="head">
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
+                    <table class="table table-responsive">
+                        <tbody>
+                            <tr>
+                                <td>学号</td>
+                                <td>B11111111</td>
+                            </tr>
+                            <tr>
+                                <td>姓名</td>
+                                <td>王境泽</td>
+                            </tr>
+                            <tr>
+                                <td>//</td>
+                                <td>TODO...</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer text-muted text-right">
+            <button type="button" class="btn btn-default">返回</button>
+            <button type="button" class="btn btn-primary">编辑资料</button>
+        </div>
+    </div>
+</div>
