继续写了一些前端,包括报销内容查看,审批的一部分 上一次commit写了后端的一部分框架以及，稍微修改了数据库结构,现在权限部分不再在用户user表里了

--- a/protected/view/main_index.html
+++ b/protected/view/main_index.html
@@ -9,7 +9,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card text-center">
                 <div class="card-header">
-                        <h4 class="card-title">支出统计</h4>
+                        <h4 class="card-title">你的报销项目</h4>
                 </div>
                 <div class="card-body">
                     <p class="card-text">//TODO..</p>
@@ -19,7 +19,7 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
             <div class="card text-center">
                 <div class="card-header">
-                        <h4 class="card-title">//TODO..</h4>
+                        <h4 class="card-title">这里该放什么呢...</h4>
                 </div>
                 <div class="card-body">
                     <p class="card-text">//TODO..</p>
