--- a/protected/view/navbar.html
+++ b/protected/view/navbar.html
@@ -26,7 +26,7 @@
                         <a class="dropdown-item" href="/account/profile">我的资料</a>
                         <a class="dropdown-item" href="/Reimbursement/Initiate">发起报销</a>
                         <{if $allow_judge}>
-                            <a class="dropdown-item" href="#">开始审批</a>
+                            <a class="dropdown-item" href="/Reimbursement/approval">开始审批</a>
                         <{/if}>
                         <{if $is_admin}>
                             <a class="dropdown-item" href="#">系统管理</a>
