--- a/protected/view/account_editprofile.html
+++ b/protected/view/account_editprofile.html
@@ -2,6 +2,9 @@
     tr{
         border-top-style: hidden;
     }
+    #cpw-card{
+        margin-top: 2rem;
+    }
 </style>
 <div class="container mundb-standard-container">
     <div class="card">
@@ -86,7 +89,7 @@
             <button type="button" class="btn btn-danger" onclick="submit_edit()">确认编辑</button>
         </div>
     </div>
-    <div class="card">
+    <div class="card" id="cpw-card">
         <div class="card-header">
             更改密码
         </div>
