写了两个controller和25565个bug

--- a/protected/view/reimbursement_view.html
+++ b/protected/view/reimbursement_view.html
@@ -30,7 +30,7 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="btn-fluid btn btn-primary" type="button" data-toggle="collapse" data-target="#other_info" aria-expanded="false" aria-controls="other_info">
+            <button class="btn-fluid btn btn-primary" action="?action=viewVoucher" type="button" data-toggle="collapse" data-target="#other_info" aria-expanded="false" aria-controls="other_info">
                 查看相关凭证
             </button>
             <div class="collapse" id="other_info">
@@ -57,7 +57,7 @@
                     <{/if}>
                 </div>
             </div>
-            <button class="btn-fluid btn btn-primary" type="button" data-toggle="collapse" data-target="#log" aria-expanded="false" aria-controls="log">
+            <button class="btn-fluid btn btn-primary" action="?action=viewChangeLog" type="button" data-toggle="collapse" data-target="#log" aria-expanded="false" aria-controls="log">
                 查看编辑/审批记录
             </button>
             <div class="collapse" id="log">
