--- a/protected/view/account_profile.html
+++ b/protected/view/account_profile.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="text-center col-xs-12 col-sm-12 col-md-6 col-lg-5">
                     <{if isset($portrait)}> 
-                    <img src="<{$portrait}>" alt="head">
+                    <img class="img-fluid" src="/file/img/<{$portrait}>.jpg" alt="head">
                     <{else}>
                     <h1>头像</h1>
                     <{/if}>
